// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on GifExpertApp Should make a snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test on GifExpertApp should show the categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="dbz"
      key="dbz"
    />
    <GifGrid
      category="death note"
      key="death note"
    />
  </ol>
</Fragment>
`;
